WIP: - added service CitiesService - updated npm packages and dependecies - lorem ipsum list of cities - add city form

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="jumbotron">
     <h1>Hello!</h1>
     <p>This is website, where you can check current weather in many locations</p>
+
+    <a class="btn btn-lg btn-primary " routerLink="citiesList">See list of cities</a>
 </div>
 
