--- a/src/app/city/cities-list.component.html
+++ b/src/app/city/cities-list.component.html
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div *ngFor="let city of cities">
-            <city-weather [name]="city"></city-weather>
+            <city-weather-block [city]="city"></city-weather-block>
         </div>
     </div>
 </div>
