--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,6 @@
     <h1>Hello!</h1>
     <p>This is website, where you can check current weather in many locations</p>
 
-    <a class="btn btn-lg btn-primary " routerLink="citiesList">See list of cities</a>
+    <a class="btn btn-lg btn-primary " routerLink="cities/">See list of cities</a>
 </div>
 
