--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -6,17 +6,23 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Weather Monitor</a>
+            <a class="navbar-brand" routerLinkActive="/" routerLinkActive="active">Weather Monitor</a>
         </div>
 
-        <form class="navbar-form navbar-left">
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="City name">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <!--<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
+                <li><a routerLink="/cities" routerLinkActive="active">Cities</a></li>
+
+            </ul>
+        </div><!-- /.navbar-collapse -->
+
+        <!--  <form class="navbar-form navbar-left">
+              <div class="form-group">
+                  <input type="text" class="form-control" placeholder="City name">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+          </form>-->
     </div><!-- /.container-fluid -->
 </nav>
