- displaying minimal weather info for city - colorful panels for each city panel - events emitter - added bootstrap,jquery plugins - environment files

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,102 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*************************************************************************************************/
+/* Global - Base																				 */
+/*************************************************************************************************/
+/*************************************************************************************************/
+/* Global - Base																				 */
+/*************************************************************************************************/
+.weather-bg {
+	background: #8175c7;
+	border-radius: 4px 4px 0 0;
+	-webkit-border-radius: 4px 4px 0 0;
+	color: #fff;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 300;
+}
+
+.weather-bg i {
+	font-size: 60px;
+	display: block;
+}
+
+.weather-category {
+	padding: 15px 0;
+	color: #74829C;
+}
+
+/**************************************************
+*                  WEATHER
+ **************************************************/
+
+.weather-bg {
+	/*background: #8175c7;*/
+	border-radius: 4px 4px 0 0;
+	-webkit-border-radius: 4px 4px 0 0;
+	color: #fff;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 300;
+}
+
+.weather-bg i {
+	font-size: 40px;
+	display: block;
+}
+
+.weather-bg .degree {
+	font-size: 40px;
+}
+
+.weather-category {
+	padding: 15px 0;
+	color: #74829C;
+}
+
+.weather-category ul {
+	padding: 0;
+	margin: 0;
+	display: inline-block;
+	width: 100%;
+}
+
+.weather-category ul li {
+	display: inline-block;
+	width: 32%;
+	text-align: center;
+	border-right: 1px solid #e6e6e6;
+	display: inline-block;
+}
+
+.weather-category ul li h5 {
+	margin: 0 0 5px 0;
+	text-transform: uppercase;
+	font-weight: 300;
+}
+
+.weather-category ul li a {
+}
+
+.weather-category ul li:last-child {
+	border-right: none;
+}
+
+.weather-bg {
+	border-radius: 4px 4px 0 0;
+	-webkit-border-radius: 4px 4px 0 0;
+	color: #fff;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 300;
+}
+
+.weather-bg i {
+	font-size: 40px;
+	display: block;
+}
+
+.weather-category {
+	padding: 15px 0;
+	color: #74829C;
+}
