--- a/src/app/shared/parts/city-weather-block.component.html
+++ b/src/app/shared/parts/city-weather-block.component.html
@@ -1,63 +1,47 @@
-<div class="col-sm-4">
-    <div class="weather card">
-        <div class="flatWeatherPlugin full">
-            <h2>{{city.name}}</h2>
-
-            <a [routerLink]="['/cities/details', city.id]">details</a>
-
-            <div class="wiToday">
-                <div class="wiIconGroup">
-                    <div class="wi wi520">{{temp}}°</div>
-                    <p class="wiText">Light intensity shower rain</p>
-                </div>
-                <p class="wiTemperature"><sup>°C</sup></p>
-                <div class="wiDetail"><p class="wiDay">Tuesday</p>
-                    <ul class="astronomy">
-                        <li class="wi sunrise">7:44 AM</li>
-                        <li class="wi sunset">6:28 PM</li>
-                    </ul>
-                    <ul class="temp">
-                        <li>Max : 9<sup>°C</sup></li>
-                        <li>Min : 6<sup>°C</sup></li>
-                    </ul>
-                    <ul class="atmosphere">
-                        <li class="wi humidity">87</li>
-                        <li class="wi pressure">1013</li>
-                        <li class="wi wind">N 5.1 km/h</li>
-                    </ul>
+<section class="panel col-sm-4">
+    <ng-template [ngIf]="weather">
+        <div class="weather-bg" [style.background-color]="bcgColor">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <i class="fa fa-cloud"></i>
+                        {{city.name}}
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="degree">
+                            {{weather.main.temp}}°
+                        </div>
+                    </div>
                 </div>
             </div>
-            <ul class="wiForecasts">
-                <li class="wiDay"><span>Wednesday</span>
-                    <ul class="wiForecast">
-                        <li class="wi wi800"></li>
-                        <li class="wiMax">8<sup>°C</sup></li>
-                        <li class="wiMin">0<sup>°C</sup></li>
-                    </ul>
-                </li>
-                <li class="wiDay"><span>Thursday</span>
-                    <ul class="wiForecast">
-                        <li class="wi wi800"></li>
-                        <li class="wiMax">11<sup>°C</sup></li>
-                        <li class="wiMin">-2<sup>°C</sup></li>
-                    </ul>
-                </li>
-                <li class="wiDay"><span>Friday</span>
-                    <ul class="wiForecast">
-                        <li class="wi wi500"></li>
-                        <li class="wiMax">12<sup>°C</sup></li>
-                        <li class="wiMin">7<sup>°C</sup></li>
-                    </ul>
-                </li>
-                <li class="wiDay"><span>Saturday</span>
-                    <ul class="wiForecast">
-                        <li class="wi wi500"></li>
-                        <li class="wiMax">17<sup>°C</sup></li>
-                        <li class="wiMin">10<sup>°C</sup></li>
-                    </ul>
-                </li>
-            </ul>
         </div>
-    </div>
-</div>
 
+        <footer class="weather-category">
+            <ul>
+                <li class="active">
+                    <h5>humidity</h5>
+                    {{weather.main.humidity}}%
+                </li>
+                <li>
+                    <h5>pressure</h5>
+                    {{weather.main.pressure}} hPa
+                </li>
+                <li>
+                    <h5>winds</h5>
+                    {{weather.wind.speed}} metres/sec
+                </li>
+                <!--    <li>
+                        <a class="btn btn-sm  btn-default" [routerLink]="['/cities/details', city.id]"><i class="fa fa-pencil"></i> </a>
+                    </li>-->
+            </ul>
+        </footer>
+        <!--{{weather}}-->
+    </ng-template>
+    <ng-template #elseBlock>
+        <div class="panel-body">
+            <p *ngIf="error">{{error}}</p>
+
+            Loading data
+        </div>
+    </ng-template>
+</section>
